# JeuLibre3D

./: CMakelists.txt
Editor/: CMakeLists.txt
Editor/include/: Context.h  HierarchyPanel.h  InspectorPanel.h  Layer.h  Menubar.h  Offscreen.h  Picker.h  Serialiser.h  Toolbar.h  UndoManager.h  Viewport.h
Editor/include/Commands/: ComponentCommand.h  ICommand.h
Editor/src/: Context.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  Layer.cpp  Menubar.cpp  Offscreen.cpp  Picker.cpp  Serialiser.cpp  Toolbar.cpp  UndoManager.cpp  Viewport.cpp
Engine/: CMakelists.txt
Engine/include/: Event.h  EventBus.h  Sparse.h
GameLib/include/: CarPhysic.h  CollisionComponent.h  Enemy.h  Game.h  GameAudio.h  GameFiles.h  GameRenderer.h  IGameScene.h  Player.h  ScoreManager.h  Track.h  Weapon.h
GameLib/src/: CollisionComponent.cpp  Enemy.cpp  Game.cpp  GameAudio.cpp  GameRenderer.cpp  IGameScene.cpp  Player.cpp  ScoreManager.cpp  Track.cpp  Weapon.cpp
ImGui/: CMakelists.txt
ImGui/include/: DebugDraw3D.h  KGR_ImGui.h
ImGui/src/: DebugDraw3D.cpp  KGR_ImGui.cpp
PrivateSetup/: VcpkgSetup.bat
Ressources/Models/: celica.mtl  celica_body.mtl  qscvwxc.kscene  tesfdsdfs.kscene  test.kscene  test_lag.mtl
Ressources/Shaders/: compile.bat  shader_2.slang  shader_Ui.slang  shader_line.slang  slang.spv  slang_line.spv  slang_ui.spv
Sample/SampleGui/: CMakelists.txt
Sample/include/: ObjectEditor.h
Sample/src/: ObjectEditor.cpp  main.cpp
SampleGui/include/: ObjectEditor.h  ObjectState.h
SampleGui/src/: ObjectEditor.cpp  main.cpp
Vulkan/: CMakelists.txt
Vulkan/include/: Image.h  (+17 more)
(+125 files in other folders)
